d2c-org/ilh-sales/base-code/main/default/objects/DIConsumerContainer__mdt/DIConsumerContainer__mdt.object-meta.xml
<CustomObject>
    <description>Used in dependency injection framework. This object represents the dependencies in the DI Container. Label = Name of service. Name = Unique name for record.</description>
    <label>DI Consumer Container</label>
    <pluralLabel>DI Consumer Containers</pluralLabel>
</CustomObject>