d2c-org/ilh-sales/base-code/main/default/objects/DIConsumerContainer__mdt/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <description>This field refers to the kind of dependencies this container relies on. Separate multiple values with a comma.</description>
    <inlineHelpText>This field refers to the kind of dependencies this container relies on. Separate multiple values with a comma.</inlineHelpText>
    <label>Dependencies</label>
    <type>TextArea</type>
</CustomField>