d2c-org/ilh-sales/base-code/main/default/objects/DIConsumerContainer__mdt/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <description>Factory that this container is related to.</description>
    <inlineHelpText>Factory that this container is related to.</inlineHelpText>
    <label>Factory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>