d2c-org/ilh-sales/base-code/main/default/objects/DIConsumerContainer__mdt/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Persona assigned to user</description>
    <inlineHelpText>Persona assigned to user</inlineHelpText>
    <label>Persona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>